--- a/04_GuessGame/style.css
+++ b/04_GuessGame/style.css
@@ -20,10 +20,10 @@
     border-radius: 20px;
     background-color: rgba(255, 255, 255, 0.115);
     backdrop-filter: blur;
-    aspect-ratio: 1/1;
+    aspect-ratio: 3/4;
     overflow: hidden;
     width: 300px;
-    height: 300px;
+    height: 400px;
     padding-right: 10px;
     display: flex;
     flex-direction: column;
@@ -44,6 +44,7 @@ input{
     cursor: pointer;
     background-color: rgb(243, 144, 227);
     transition: all 1ms ease-in;
+    border: 1px solid palevioletred;
 }
 #submit:hover{
     scale: 1.1;;
