--- a/06_keyboard_Magic/style.css
+++ b/06_keyboard_Magic/style.css
@@ -12,3 +12,11 @@
     width:100vw;
     height:100vh;
 }
+table,th,td{
+    border: 1px solid white;
+    border-radius:2px;
+    margin: 10px;
+    padding: 15px;
+    text-align: center;
+    border-collapse: collapse;
+}
